Event CRUD (#30)
* created event crud endpoints

* renamed test

* changed login path

* api codegen

* added event entities and modified filldatabase

* renamed UsersController

* added get events between dates endpoint

* generated basic error response dto

* api doc repair

* api codegen

* EventsController.getEventById endpoint

* EventsController.createEvent endpoint

* EventsController.updateEventById endpoint

* EventsController.deleteEventById endpoint implementation

* deleteEventById logic refactoring

* api codegen

* renamed UsersApiService

* added default children path redirect to admin-routing.module

* working state of grid concept

* updatedd angular and added fullcalendar depenency

* changed check-token endpoint to GET

* BE codegen

* fe codegen

* corrected imports

* add directives imports

* new dates for mock data

* exclued GET /events endpoint from auth

* added events to app state

* created events feature service

* added full-calendar to event-display.component

* Created matDialog. Challenges: 1) sending Event data to Dialog 2) proper html/css

* changed state imports

* added shared imports

* changed event-display to module

* created event mapper service

* changed events.service to use mapper

* moved event editor

* changed event-display to handle event dialog

* implemented event-editor-dialog.component with typed reactive forms

* added calendar event type guard

* adapted application state to handle event CRUD

* added event-dto.type-guard

* changed mapper service signature and corrections

* added update, delete, create to events.service

* new fields in event-form

* added event-editor-data model

* addded craete and update actions to event handdlers

* added new functionality to event editor

* URL validation for event creating/modification

* Delete button only appearing at event update. Might need a refactor to make the soluti
